feat: change assertion error message formatting